[package]
name = "sslsnoop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["derive"] }
ctrlc = "3.4.0"
elf = "0.7.2"
libbpf-rs = "0.20.1"
libc = "0.2.147"
log = "0.4.19"
phf = { version = "0.11", features = ["macros"] }
plain = "0.2.3"
simple_logger = "4.2.0"

[build-dependencies]
libbpf-cargo = "0.20.1"
